--- a/css/contact.css
+++ b/css/contact.css
@@ -1,6 +1,9 @@
 .container_contact {
-  margin-bottom: 50px;
-
+  background-image: url("../img/shipdetail-space-bg.jpg");
+  background-attachment: fixed;
+  background-size: cover;
+  background-repeat: no-repeat;
+  margin-bottom: -22px;
 }
 
 .container_contact h1 {
@@ -9,6 +12,8 @@
   font-size: 42px;
   color: white;
   text-align: center;
+  margin: 0;
+  padding: 30px 0;
 }
 
 
