--- a/css/index.css
+++ b/css/index.css
@@ -1,11 +1,230 @@
-body {
-    background-image: url(../img/gridbg_glow.png);
-    background-color: #000;
-    overflow-x: hidden !important;
+body{
+    background:black;
+    color:var(--body-color);
+    background: url(https://robertsspaceindustries.com/rsi/static/images/gridbg_glow.png), url(https://robertsspaceindustries.com/rsi/static/images/common/bg-stars-2560.jpg) repeat;
+    background-attachment: fixed;
 }
 
 html {
     position: relative;
+}
+
+a, a:hover {
+    font-family: "jurabook";
+    text-decoration: none;
+    transition: color 0.3s ease-in-out;
+}
+.post_dark{
+    display: block;
+    margin: 50px auto;
+
+}
+.container_postcard{
+    display: block;
+    margin: auto;
+    width: 100%;
+}
+/* Cards */
+.postcard {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    box-shadow: 0 4px 21px -12px rgba(1, 238, 255, 0.66);
+    border-radius: 10px;
+    margin: 0 auto 2rem auto;
+    overflow: hidden;
+    position: relative;
+    color: #fff;
+    width: 80%;
+ 
+}
+.postcard:after{
+    content:'';
+    display:block;
+    position:absolute;
+    bottom:-.2rem;
+    left:50%;
+    transform:translateX(-50%);
+    width:5rem;
+    border-bottom:.3rem solid var(--primary-color);
+    box-shadow: 0 0 15px 3px rgba(0, 112, 202, 0.6), 0 -15px 25px 0 rgba(11, 183, 226, 0.65);
+}
+.postcard.dark {
+    background:var(--light-color);
+}
+
+.postcard .t-dark {
+    color: #18151f;
+}
+.postcard a {
+    color: inherit;
+}
+.postcard h1, .postcard .h1 {
+    font-family: "jurabook";
+    margin-bottom: 0.5rem;
+    font-weight: 800;
+    line-height: 1.2;
+}
+.postcard .small {
+    font-size: 80%;
+}
+.postcard .postcard__title {
+    font-size: 1.75rem;
+}
+.postcard .postcard__img {
+    max-height: 180px;
+    width: 100%;
+    object-fit: cover;
+    position: relative;
+}
+.postcard .postcard__img_link {
+    display: contents;
+}
+.postcard .postcard__bar {
+    width: 50px;
+    height: 10px;
+    margin: 10px 0;
+    border-radius: 5px;
+    background-color: var(--light-black-color);
+    transition: width 0.2s ease;
+}
+.postcard .postcard__text {
+    padding: 1.5rem;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+}
+.postcard .postcard__preview-txt {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    text-align: justify;
+    height: 100%;
+}
+.postcard .postcard__tagbox {
+    display: flex;
+    flex-flow: row wrap;
+    font-size: 14px;
+    margin: 20px 0 0 0;
+    padding: 0;
+    justify-content: center;
+}
+.postcard .postcard__tagbox .tag__item {
+    display: inline-block;
+    background: rgba(83, 83, 83, 0.4);
+    border-radius: 3px;
+    padding: 2.5px 10px;
+    margin: 0 5px 5px 0;
+    cursor: default;
+    user-select: none;
+    transition: background-color 0.3s;
+}
+.postcard .postcard__tagbox .tag__item:hover {
+    background: rgba(83, 83, 83, 0.8);
+}
+.postcard:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-image: linear-gradient(-70deg, #424242, transparent 50%);
+    opacity: 1;
+    border-radius: 10px;
+}
+.postcard:hover .postcard__bar {
+    width: 100px;
+}
+@media screen and (min-width: 889px) {
+    .postcard {
+        flex-wrap: inherit;
+   }
+    .postcard .postcard__title {
+        font-size: 2rem;
+   }
+    .postcard .postcard__tagbox {
+        justify-content: start;
+   }
+    .postcard .postcard__img {
+        max-width: 300px;
+        max-height: 100%;
+        transition: transform 0.3s ease;
+   }
+    .postcard .postcard__text {
+        padding: 5px 3rem;
+        width: 100%;
+   }
+    .postcard .media.postcard__text:before {
+        content: "";
+        position: absolute;
+        display: block;
+        background: #18151f;
+        top: -20%;
+        height: 130%;
+        width: 55px;
+   }
+    .postcard:hover .postcard__img {
+        transform: scale(1.1);
+   }
+    .postcard:nth-child(2n+1) {
+        flex-direction: row;
+   }
+    .postcard:nth-child(2n+0) {
+        flex-direction: row-reverse;
+   }
+    .postcard:nth-child(2n+1) .postcard__text::before {
+        left: -12px !important;
+        transform: rotate(4deg);
+   }
+    .postcard:nth-child(2n+0) .postcard__text::before {
+        right: -12px !important;
+        transform: rotate(-4deg);
+   }
+}
+@media screen and (min-width: 1024px) {
+    .postcard__text {
+        padding: 2rem 3.5rem;
+   }
+    .postcard__text:before {
+        content: "";
+        position: absolute;
+        display: block;
+        top: -20%;
+        height: 130%;
+        width: 55px;
+   }
+
+    .postcard.light .postcard__text:before {
+        background: #e1e5ea;
+   }
+}
+/* COLORS */
+
+.postcard .postcard__tagbox .blue.auteur:hover {
+    background: #0076bd;
+}
+.blue .postcard__title:hover {
+    color: #0076bd;
+}
+.blue .postcard__bar {
+    background-color: #0076bd;
+}
+.blue::before {
+    background-image: linear-gradient(-30deg, rgba(0, 118, 189, 0.1), transparent 50%);
+}
+.blue:nth-child(2n)::before {
+    background-image: linear-gradient(30deg, rgba(0, 167, 189, 0.1), transparent 50%);
+}
+
+@media screen and (min-width: 769px) {
+
+    .blue::before {
+        background-image: linear-gradient(-80deg, rgba(0, 118, 189, 0.1), transparent 50%);
+   }
+    .blue:nth-child(2n)::before {
+        background-image: linear-gradient(80deg, rgba(0, 170, 189, 0.1), transparent 50%);
+   }
+   
 }
 
 .actu_ind_accueil {
@@ -59,57 +278,6 @@ html {
     font-size: 15px;
 }
 
-#hero-header {
-    box-shadow: 3px 3px 2px #bebebe;
-    width: 100%;
-    height: 100vh;
-    /* hero-header flexbox */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    /* Texy style */
-    text-align: center;
-    color: white;
-
-    /* Background image */
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/Source.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-position-x: 70%;
-    background-position-y: 20%;
-}
-
-#hero-title {
-    font-size: clamp(2rem, 4vw, 4rem);
-}
-
-#hero-text {
-    display: block;
-    margin: auto;
-    font-size: clamp(1rem, 2.5vw, 1.5rem);
-    margin-top: 75px;
-    width: 70%;
-    line-height: 1.5em;
-}
-
-#hero-button {
-    border: solid 2px white;
-    background-color: inherit;
-    color: white;
-    margin-top: 75px;
-    width: 25%;
-    height: 55px;
-    font-size: 15px;
-    border-radius: 10px;
-}
-
-#hero-button:hover {
-    cursor: pointer;
-    background-color: #fff;
-    color: #000;
-}
 
 .flex-slider {
     width: 100%;
@@ -117,6 +285,7 @@ html {
 }
 
 .flex-slider .slides {
+    width: 100%;
     list-style: none;
     overflow: hidden;
     margin: 0;
