--- a/project/www/css/equipement.css
+++ b/project/www/css/equipement.css
@@ -1,4 +1,4 @@
-.page_vaisseau{
+.page_equipement{
   background-image: url("../img/shipdetail-space-bg.jpg");
   background-attachment: fixed;
   background-size: cover;
@@ -74,7 +74,7 @@
 /*FIN MENU CHOIX CONSTRUCTEUR*/
 
 
-.container_vaisseau {
+.container_equipement {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -98,7 +98,7 @@
   color: white;
 }
 
-.container_vaisseau img {
+.container_equipement img {
   width: 320px;
   height: 150px;
   border: 1px;
@@ -112,7 +112,7 @@
   clip-path: polygon(0 0, 100% 0, 100% 100%, 100% 100%, 0 100%, 26px 100%, 0 calc(100% - 26px));
 }
 
-.vaisseau_indiv {
+.equipement_indiv {
   display: flex;
   flex-direction: column;
   align-items: center;
