--- a/project/www/css/index.css
+++ b/project/www/css/index.css
@@ -27,7 +27,8 @@ a, a:hover {
     text-transform: uppercase;
     color: transparent;
     -webkit-text-stroke: 1px rgba(255, 255, 255, 0.837);
-  }
+    font-size: clamp(1.5rem, 2vw, 2rem);
+}
 .post_dark{
     display: block;
     margin: 50px auto;
@@ -83,7 +84,7 @@ a, a:hover {
     font-size: 80%;
 }
 .postcard .postcard__title {
-    font-size: 1.75rem;
+    font-size: clamp(1.5rem, 2vw, 1.8rem);
 }
 .postcard .postcard__img {
     max-height: 180px;
@@ -111,8 +112,9 @@ a, a:hover {
 .postcard .postcard__preview-txt {
     overflow: hidden;
     text-overflow: ellipsis;
-    text-align: justify;
+    font-size: clamp(1rem, 2vw, 1rem);
     height: 100%;
+    line-height: 1.5rem;
 }
 .postcard .postcard__tagbox {
     display: flex;
@@ -153,9 +155,7 @@ a, a:hover {
     .postcard {
         flex-wrap: inherit;
    }
-    .postcard .postcard__title {
-        font-size: 2rem;
-   }
+
     .postcard .postcard__tagbox {
         justify-content: start;
    }
@@ -710,6 +710,7 @@ html {
 a, a:hover {
     text-decoration: none;
 }
+
 .icon {
     display: inline-block;
     width: 1em;
