--- a/project/www/css/planete.css
+++ b/project/www/css/planete.css
@@ -66,7 +66,7 @@
     filter: grayscale(50%);
 }
 
-.hurston {
+.lieu {
     color: aliceblue;
     margin-top: 20px;
     display: flex;
@@ -75,16 +75,16 @@
 
 }
 
-.hurston h1 {
+.lieu h1 {
     text-align: center;
     font-weight: 900;
 }
 
-.hurston h1 img {
+.lieu h1 img {
     width: 20px;
 }
 
-.hurston p {
+.lieu p {
     color: white;
     padding: 20px;
     line-height: 1.2rem;
