--- a/project/www/css/style-header.css
+++ b/project/www/css/style-header.css
@@ -200,7 +200,7 @@ nav .content .links {
     transform: translateY(-50%);
     width: 70px;
     height: 50px;
-    background: var(--blue-vert-color);
+    background: var(--primary-color);
     border: none;
     outline: none;
     color: #fff;
