--- a/project/www/css/contact.css
+++ b/project/www/css/contact.css
@@ -1,206 +1,179 @@
+@-webkit-keyframes bounce {
+	0%, 100% {
+		-webkit-transform: translateX(0px);
+	}
+	30% {
+		-webkit-transform: translateX(5px);
+	}
+	60% {
+		-webkit-transform: translateX(-5px);
+	}
+}
+@-moz-keyframes bounce {
+	0%, 100% {
+		-moz-transform: translateX(0px);
+	}
+	30% {
+		-moz-transform: translateX(5px);
+	}
+	60% {
+		-moz-transform: translateX(-5px);
+	}
+}
+@keyframes bounce {
+	0%, 100% {
+		transform: translateX(0px);
+	}
+	30% {
+		transform: translateX(5px);
+	}
+	60% {
+		transform: translateX(-5px);
+	}
+}
 .container_contact {
-  background-image: url("../img/shipdetail-space-bg.jpg");
-  background-attachment: fixed;
-  background-size: cover;
-  background-repeat: no-repeat;
-  margin-bottom: -22px;
-}
-
-.container_contact h1 {
-  font-family: 'Poppins', sans-serif, 'arial';
-  font-weight: 600;
-  font-size: 42px;
-  color: white;
+  max-width: 960px;
+  margin: 25px auto;
   text-align: center;
-  margin: 0;
-  padding: 30px 0;
+  -webkit-perspective: 800px;
+  -moz-perspective: 800px;
+  perspective: 800px;
 }
-
-
-.container_contact h4 {
-  font-family: 'Roboto', sans-serif, 'arial';
-  font-weight: 400;
-  font-size: 20px;
-  color: #9b9b9b;
-  line-height: 1.5;
-}
-
-/* ///// inputs /////*/
-
-.container_contact input:focus~label,
-.container_contact textarea:focus~label,
-.container_contact input:valid~label,
-.container_contact textarea:valid~label {
-  font-size: 0.75em;
-  color: #999;
-  top: -5px;
-  -webkit-transition: all 0.225s ease;
-  transition: all 0.225s ease;
-}
-
-.styled-input {
-  float: left;
-  width: 293px;
-  margin: 1rem 0;
-  position: relative;
-  border-radius: 4px;
-}
-
-@media only screen and (max-width: 768px) {
-  .styled-input {
-    width: 100%;
-  }
-}
-
-.styled-input label {
-  color: #999;
-  padding: 1.3rem 30px 1rem 30px;
+.contact-loading {
+  display: none;
   position: absolute;
-  top: 10px;
+  top: 0;
   left: 0;
-  -webkit-transition: all 0.25s ease;
-  transition: all 0.25s ease;
-  pointer-events: none;
-}
-
-.styled-input.wide {
-  width: 650px;
-  max-width: 100%;
-}
-
-.container_contact input[type="text"], input[type="email"],
-.container_contact textarea {
-  padding: 30px;
-  border: 0;
   width: 100%;
-  font-size: 1rem;
-
-  border-radius: 4px;
+  height: 100%;
+  background: #1D6782;
+  opacity: 0.2;
+  z-index: 100;
 }
-
-.container_contact input:focus,
-.container_contact textarea:focus {
-  background-color: rgb(232, 240, 254);
-  color: rgb(43, 43, 43);
-}
-
-.container_contact .input-container input:focus,
-.container_contact textarea:focus {
-  outline: 0;
-}
-
-.container_contact .input-container input:focus~span,
-.container_contact textarea:focus~span {
-  width: 100%;
-  -webkit-transition: all 0.075s ease;
-  transition: all 0.075s ease;
-}
-
-.container_contact .input-container textarea {
-  width: 100%;
-  min-height: 15em;
-  margin-bottom: 20px;
-}
-
-.container_contact .input-container {
-  width: 650px;
-  height: 600px;
-  max-width: 100%;
-  margin: 20px auto 25px auto;
-}
-
-.container_contact .input-container .button {
-
+.contact-loading.show {
   display: block;
-  margin: auto;
-  min-width: 200px;
-  min-height: 40px;
-  font-family: 'Nunito', sans-serif;
-  font-size: 18px;
-  text-transform: uppercase;
-  letter-spacing: 1.3px;
-  font-weight: 700;
-  color: #313133;
-  background: linear-gradient(90deg, rgb(0, 255, 217) 0%, rgb(0, 225, 229) 100%);
-  border: none;
-  border-radius: 1000px;
-  box-shadow: 12px 12px 24px rgba(13, 174, 255, 0.64);
-  transition: all 0.3s ease-in-out 0s;
-  cursor: pointer;
-  outline: none;
+}
+.contact-form {
   position: relative;
-  padding: 10px;
+  width:70%;
+  padding: 15px;
+  display: inline-block;
+  background: var(--light-color);
+  -webkit-transition: all 0.7s ease-in-out;
+  -moz-transition: all 0.7s ease-in-out;
+  transition: all 0.7s ease-in-out;
 }
-
-.container_contact .input-container button::before {
-  content: '';
-  border-radius: 1000px;
-  min-width: calc(200px + 12px);
-  min-height: calc(40px + 12px);
-  border: 6px solid rgb(0, 255, 217);
-  box-shadow: 0 0 60px rgb(0, 255, 217);
+.contact-form.sending {
+  -webkit-transform: rotateX(40deg);
+  -moz-transform: rotateX(40deg);
+  transform: rotateX(40deg);
+}
+.contact-form:before {
+  content:"";
+  display: block;
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  opacity: 0;
-  transition: all .3s ease-in-out 0s;
+  top: 0;
+  left: 0;
+  height: 1px;
+  width: 100%;
+  background: rgb(33,135,231);
+  box-shadow: 0px 0px 10px 1px rgba(0, 198, 255, 0.7);
+}
+.contact-title {
+  color: #1D6782;
+  font-size: 24px;
+  font-weight: 700;
+  text-align: center;
+  padding: 10px 0;
 }
 
-.button:hover,
-.button:focus {
-  color: #313133;
-  transform: translateY(-6px);
+.field {
+  border: none;
 }
-
-button:hover::before,
-button:focus::before {
-  opacity: 1;
+.field label {
+  display: block;
+  text-align: left;
+  color: #fff;
+  opacity: 0.5;
 }
-
-button:hover::after,
-button:focus::after {
-  animation: none;
+.field input,
+.field textarea {
+  display: block;
+  width: 100%;
+  background: #17181E;
+  color: rgba(33,135,231, 0.7);
+  border: none;
+  outline: none;
+  font-size: 16px;
+  padding: 5px 8px;
+  border: 1px solid rgb(51, 54, 59);
+  border-radius: 3px;
+  margin-top: 5px;
+  letter-spacing: 1px;
+}
+.field textarea {
+  height: 150px;
+  max-height: 300px;
+}
+.field input:focus,
+.field textarea:focus {
+  box-shadow: 0px 0px 5px 1px rgba(0, 198, 255, 0.7);
+  border: 1px solid rgba(33,135,231, 0.4);
+  -webkit-transition: border 0.5s ease, box-shadow 0.5s linear;
+  -moz-transition: border 0.5s ease, box-shadow 0.5s linear;
+  transition: border 0.5s ease, box-shadow 0.5s linear;
+}
+.btn-send {
+  position: relative;
+  display: inline-block;
+  margin: 25px 0 15px;
+  border: none;
+  outline: none;
+  color: #1D6782;
+  cursor: pointer;
+  font: normal 16px 'Open Sans';
+  background: #17181E;
+}
+.btn-send span {
+  display: inline-block;
+  padding: 10px 25px;
+  font-family: "jurabook";
+}
+.btn-send.sending {
+  width: 100%;
+  height: 1px;
+  -webkit-transition: width 0.5s ease 1s, height 0.5s ease, top 1s ease 1.2s;
+  -moz-transition: width 0.5s ease 1s, height 0.5s ease, top 1s ease 1.2s;
+  transition: width 0.5s ease 1s, height 0.5s ease, top 1s ease 1.2s;
+  box-shadow: 0px 0px 10px 1px rgba(33, 138, 255, 0.7);
+}
+.btn-send:after {
+  content:'';
+  position: absolute;
+  height: 1px;
+  left: 0;
+  width: 0;
+  background: rgb(33,135,231);
+}
+.btn-send.sending:after {
+  width: 100%;
+  -webkit-transition: width 2.5s ease 1s;
+  -moz-transition: width 2.5s ease 1s;
+  transition: width 2.5s ease 1s;
+}
+.btn-send.sending > span {
   display: none;
 }
-
-@keyframes ring {
-  0% {
-    width: 30px;
-    height: 30px;
-    opacity: 1;
-  }
-
-  100% {
-    width: 300px;
-    height: 300px;
-    opacity: 0;
-  }
+.btn-send:hover {
+  color: #2183D9;
+  background: #21262B;
+  -webkit-animation: 300ms ease 0s normal none 1 bounce;
+  -moz-animation: 300ms ease 0s normal none 1 bounce;
+  animation: 300ms ease 0s normal none 1 bounce;
 }
 
-.container_contact .input-container input[type=checkbox]+label {
-  color: #ccc;
-  font-style: italic;
-}
-
-.container_contact .input-container input[type=checkbox]:checked+label {
-  color: rgb(0, 115, 255);
-  font-style: normal;
-}
-
-@media only screen and (max-width: 768px) {
-  .container_contact .input-container {
-    width: 650px;
-    height: 800px;
-    max-width: 100%;
-    margin: 20px auto 25px auto;
-  }
-
-  .container_contact h1 {
-    font-size: 40px;
-  }
-
-  .container_contact h4 {
-    font-size: 16px;
-  }
+.success {
+  font-size: 14px;
+  color: #2183D9;
+  margin: 5px 0;
 }
