--- a/project/www/css/patch_note.css
+++ b/project/www/css/patch_note.css
@@ -55,6 +55,10 @@
 }
 .patch-card__meta {
     color: #ffffff;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: flex-end;
 }
 
 .patch-card__meta i {
@@ -62,7 +66,12 @@
     display: inline-block;
     font-size: 15px;
 }
-
+.patch-card__auteur img {
+    width: 40px;
+}
+.patch-card__auteur{
+    margin-right: 10px;
+}
 .patch-card__timestamp {
     display: inline-block;
     margin-right: 15px;
