début page admin, page article

--- a/project/www/admin/src/template/header_footer.html
+++ b/project/www/admin/src/template/header_footer.html
@@ -5,28 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Konrad Star citizen</title>
     <link rel="icon" href="../favicon.ico" type="image/x-icon" />
-    <link rel="stylesheet" href="../fonts/stylesheet.css" />
-    <link rel="stylesheet" href="../css/style-header.css" />
-    <link rel="stylesheet" href="../css/index.css" />
-    <link rel="stylesheet" href="../css/equipement.css" />
-    <link rel="stylesheet" href="../css/equipement_ind.css" />
-    <link rel="stylesheet" href="../css/contact.css" />
-    <link rel="stylesheet" href="../css/planete.css" />
-    <link rel="stylesheet" href="../css/systeme.css" />
-    <link rel="stylesheet" href="../css/login.css" />
-    <link rel="stylesheet" href="../css/civilisation.css" />
-    <link rel="stylesheet" href="../css/articles.css" />
-    <link rel="stylesheet" href="../css/compte.css" />
-    <link rel="stylesheet" href="../css/login.css" />
-    <link rel="stylesheet" href="../css/squadron.css" />
-    <link rel="stylesheet" href="../css/partage_screen.css" />
-    <link rel="stylesheet" href="../css/gallerie.css" />
-    <link rel="stylesheet" href="../css/gestion_screen.css" />
-    <link rel="stylesheet" href="../css/rgpd.css" />
-    <link rel="stylesheet" href="../css/streamer.css" />
-    <link rel="stylesheet" href="../css/patch_note.css" />
-    <link rel="stylesheet" href="../css/lieu.css" />
-    <link rel="stylesheet" href="../css/gameplay.css" />
+    <link rel="stylesheet" href="../src/fonts/stylesheet.css" />
+    <link rel="stylesheet" href="../src/css/style-header.css" />
+    <link rel="stylesheet" href="../src/css/index.css" />
+    <link rel="stylesheet" href="../src/css/equipement.css" />
+    <link rel="stylesheet" href="../src/css/equipement_ind.css" />
+    <link rel="stylesheet" href="../src/css/contact.css" />
+    <link rel="stylesheet" href="../src/css/planete.css" />
+    <link rel="stylesheet" href="../src/css/systeme.css" />
+    <link rel="stylesheet" href="../src/css/login.css" />
+    <link rel="stylesheet" href="../src/css/civilisation.css" />
+    <link rel="stylesheet" href="../src/css/articles.css" />
+    <link rel="stylesheet" href="../src/css/compte.css" />
+    <link rel="stylesheet" href="../src/css/login.css" />
+    <link rel="stylesheet" href="../src/css/squadron.css" />
+    <link rel="stylesheet" href="../src/css/partage_screen.css" />
+    <link rel="stylesheet" href="../src/css/gallerie.css" />
+    <link rel="stylesheet" href="../src/css/gestion_screen.css" />
+    <link rel="stylesheet" href="../src/css/rgpd.css" />
+    <link rel="stylesheet" href="../src/css/streamer.css" />
+    <link rel="stylesheet" href="../src/css/patch_note.css" />
+    <link rel="stylesheet" href="../src/css/lieu.css" />
+    <link rel="stylesheet" href="../src/css/gameplay.css" />[#CITIZEN_INDEX_CSS#]
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -40,15 +40,7 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <script
-      src="https://kit.fontawesome.com/3cff230019.js"
-      crossorigin="anonymous"
-    ></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script
-      src="https://kit.fontawesome.com/af562a2a63.js"
-      crossorigin="anonymous"
-    ></script>
+    
     <link
       href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"
       rel="stylesheet"
@@ -58,7 +50,6 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css"
     />
-    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
   </head>
 
   <body>
@@ -71,7 +62,7 @@
         ></label>
         <div class="content">
           <div class="logo">
-            <a href="../"><img src="../img/logo_test.png" alt="" /></a>
+            <a href="../"><img src="../src/img/logo_test.png" alt="" /></a>
           </div>
           <ul class="links">
             <li><a class="radio" href="../">Accueil</a></li>
@@ -166,7 +157,7 @@
 
     <div>
       <button onclick="retourHaut()" id="haut" title="Retour haut de page">
-        <img src="../img/fleche.png" alt="fleche retour haut de page" />
+        <img src="../src/img/fleche.png" alt="fleche retour haut de page" />
       </button>
     </div>
     <div class="page">
@@ -174,7 +165,7 @@
     </div>
     <footer>
       <div class="footer-content">
-        <img src="../img/logo_test.png" alt="logo star citizen" />
+        <img src="../src/img/logo_test.png" alt="logo star citizen" />
         <div class="footer-top">
           <h1>Communauté Star Citizen France</h1>
           <p>
@@ -224,6 +215,16 @@
         <p>2023 - Communnauté Star Citizen France</p>
       </div>
     </footer>
+    <script
+      src="https://kit.fontawesome.com/3cff230019.js"
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script
+      src="https://kit.fontawesome.com/af562a2a63.js"
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
     <script>
         window.onscroll = function () {
           scrollFunction();
@@ -247,6 +248,6 @@
       </script>
       <!-- partial -->
       <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-      <script src="../js/script.js"></script>
+      <script src="../src/js/script.js"></script>[#CITIZEN_INDEX_JS#]
   </body>
 </html>
