--- a/project/www/admin/src/template/partage.html
+++ b/project/www/admin/src/template/partage.html
@@ -1,42 +1,18 @@
-<?php
-require __DIR__ . '/../../../back/connexion.php';
-include __DIR__.'/../../../src/class/classMain/TemplatePage.php';
-$sth4 = $dbco->prepare("SELECT * FROM images WHERE id_client = :id");
-$sth4->execute([":id" => $_SESSION['utilisateur']['id']]);
-
-/*Retourne un tableau associatif pour chaque entrée de notre table
-        *avec le nom des colonnes sélectionnées en clefs*/
-$images = $sth4->fetchAll(PDO::FETCH_ASSOC);
-
-
-// On récupere les données de l'utilisateur
-$req = $dbco->prepare('SELECT * FROM utilisateurs WHERE token = ?');
-$req->execute(array($_SESSION['user']));
-$data = $req->fetch(PDO::FETCH_ASSOC);
-
-$templatePage = new TemplatePage(__DIR__.'/../template/partage.html');
-$templatePage->addVarString("[#CITIZEN_USER_PSEUDO#]", $data['pseudo']);
-
-$js = $templatePage->js();
-$css = $templatePage->css();
-$contenu = $templatePage->html();
-
-/*?>
 <section id="page_user">
     <div class="user">
 
         <div class="card_user" data-state="#about">
             <div class="card-header_user">
-                <div class="card-cover_user" style="background-image: url('img/fond_blue.jpg')"></div>
-                <img class="card-avatar_user" src="img/avatar.png" alt="avatar" />
-                <h1 class="card-fullname_user"><?php echo $data['pseudo']; ?></h1>
+                <div class="card-cover_user" style="background-image: url('./../src/img/fond_blue.jpg')"></div>
+                <img class="card-avatar_user" src="./../src/img/avatar.png" alt="avatar" />
+                <h1 class="card-fullname_user">[#CITIZEN_USER_PSEUDO#]</h1>
 
             </div>
 
             <div class="card-buttons_user">
 
-                <a href="?ind=espace_user">Mon compte</a>
-                <a href="?ind=gestion_screen">Gérer mes screens</a>
+                <a href="./?ind=espace_user">Mon compte</a>
+                <a href="./?ind=gestion_screen">Gérer mes screens</a>
 
             </div>
             <div class="image_site">
@@ -83,4 +59,4 @@ $contenu = $templatePage->html();
     </div>
 
 
-</section>*/
+</section>
