--- a/project/www/admin/src/template/profile.html
+++ b/project/www/admin/src/template/profile.html
@@ -2,8 +2,8 @@
 
     <div class="card_user" data-state="#about">
         <div class="card-header_user">
-            <div class="card-cover_user" style="background-image: url('../img/fond_blue.jpg')"></div>
-            <img class="card-avatar_user" src="../img/avatar.png" alt="avatar utilisateur" />
+            <div class="card-cover_user" style="background-image: url('../src/img/fond_blue.jpg')"></div>
+            <img class="card-avatar_user" src="../src/img/avatar.png" alt="avatar utilisateur" />
             <h1 class="card-fullname_user">[#CITIZEN_USER_PSEUDO#]</h1>
 
         </div>
@@ -90,5 +90,3 @@
         </div>
     </div>
 </div>
-
-<script src="../js/modale.js"></script>
