--- a/project/www/src/css/index.css
+++ b/project/www/src/css/index.css
@@ -116,7 +116,7 @@ a, a:hover {
     height: 100%;
     line-height: 1.5rem;
 }
-.postcard .postcard__tagbox {
+.postcard__tagbox {
     display: flex;
     flex-flow: row wrap;
     font-size: 14px;
@@ -124,7 +124,10 @@ a, a:hover {
     padding: 0;
     justify-content: center;
 }
-.postcard .postcard__tagbox .tag__item {
+.postcard__tagbox .tag__item img{
+    width:30px;
+}
+.postcard__tagbox .tag__item {
     display: inline-block;
     background: rgba(83, 83, 83, 0.4);
     border-radius: 3px;
@@ -134,8 +137,11 @@ a, a:hover {
     user-select: none;
     transition: background-color 0.3s;
 }
-.postcard .postcard__tagbox .tag__item:hover {
+.postcard__tagbox .tag__item:hover {
     background: rgba(83, 83, 83, 0.8);
+}
+.postcard__tagbox .tag__item a:hover{
+    color: #e1e5ea;
 }
 .postcard:before {
     content: "";
@@ -214,7 +220,7 @@ a, a:hover {
 }
 /* COLORS */
 
-.postcard .postcard__tagbox .blue.auteur:hover {
+.postcard__tagbox .blue.auteur:hover {
     background: var(--primary-color);
 }
 .blue .postcard__title:hover {
